--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ html {
   align-items: center;
 }
 
-.col-medio {
+.col-media {
   width: calc(100% / 9) !important;
   aspect-ratio: 1 / 1 !important;
   border: 1px solid white;
